Revert "Bump Java toolchain from 17 to 21"
This reverts commit 98194b4e08a5f033e3d27149e8b642df1a898072.